[gd_scene load_steps=3 format=3 uid="uid://cwudpxouakvg2"]

[ext_resource type="Script" path="res://scripts/world/components/teleport.gd" id="1_d26hg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ddiuo"]
size = Vector2(10, 100)

[node name="Teleport" type="Area2D"]
collision_layer = 16
collision_mask = 0
monitoring = false
script = ExtResource("1_d26hg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ddiuo")

[node name="SpawnRight" type="Marker2D" parent="."]
position = Vector2(30, 0)

[node name="SpawnLeft" type="Marker2D" parent="."]
position = Vector2(-30, 0)

[node name="SpawnTop" type="Marker2D" parent="."]
position = Vector2(0, -72)

[node name="SpawnBottom" type="Marker2D" parent="."]
position = Vector2(0, 75)
